<resources>
    <string name="app_name">ForecastPro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iconweather">iconWeather</string>
    <string name="temp">Max/Min</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="syncbutton">syncButton</string>
    <string name="searchbutton">searchButton</string>
    <string name="days">DAYS</string>
    <string name="hours">HOURS</string>
    <string name="signPlus">+</string>
    <string name="lastUpdate">%s</string>
    <string name="currentTemperature">%s°</string>
    <string name="maxMin">%s°/%s°</string>
    <string name="windKm">%skm/h</string>
    <string name="humidityPercent">%s%%</string>
    <string name="maxMinTemp">%s°/%s°</string>
    <string name="signMinus">-</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="thermostaticon">thermostatIcon</string>
    <string name="windicon">windIcon</string>
    <string name="forecastpro">ForecastPro</string>
    <string name="humidityicon">humidityIcon</string>
    <string name="type_user_email">Type your city…</string>
    <string name="buttontofindusers">btnToFindCity</string>
    <string name="iconweatherdialog">iconWeatherDialog</string>
    <string name="iconWeatherDialog">iconWeatherDialog</string>
    <string name="enter_your_city">Get the weather forecast for your city</string>
    <string name="iconwelcome">iconWelcome</string>
    <string name="today">Today</string>
    <string name="first_desc">Welcome to ForecastPro</string>
    <string name="second_desc">Stay updated on weather changes to always plan your activities accordingly</string>
    <string name="third_desc">We provide the most accurate weather information based on reliable sources</string>
    <string name="forth_desc">Our simple and intuitive interface makes our app easy to use</string>
    <string name="welcome_to_forecastpro">Welcome to ForecastPro</string>
    <string name="getStartedSecondText">Let\'s get started!</string>
    <string name="getStartedThirdText">To provide an accurate weather forecast, please grant access to your location</string>
    <string name="weatherIn">Weather in…</string>
    <string name="grant_access">Provide Current Location</string>
    <string name="getStartedForthText">To give you an accurate weather forecast, please provide the city name</string>
    <string name="mainlogo">mainLogo</string>
    <string name="get_started">Get Started</string>
    <string name="textWarning">Для предоставления точного прогноза погоды, мы нуждаемся в доступе к вашему текущему местоположению. Это позволит нам обеспечить вам наиболее точную и актуальную информацию о погоде в вашем регионе. Пожалуйста, разрешите доступ к вашему местоположению, нажав \'Разрешить\'. Мы обеспечиваем абсолютную конфиденциальность и безопасность ваших данных.</string>
    <string name="buttontoback">buttonToBack</string>
    <string name="welcomeText">Welcome to ForecastPro</string>
    <string name="instructions">⚡ Easily create new notes by entering text in the designated input field.\n⚡ Get rid of unnecessary entries with a left or right swipe on the note item.\n⚡ Edit notes with a simple tap. Open the editing mode to make changes.\n⚡ Mark notes as completed with a long press on the item.</string>
    <string name="desc">Weather forecast for 3 days and hourly forecast for a specific city. Easily discover maximum and minimum temperatures, humidity percentage, and wind speed</string>

</resources>