<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".fragments.MainFragment">

    <TextView
        android:id="@+id/lastUpdateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/lastUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Updated: Sep 12, 11:36" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:letterSpacing="0.2"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastUpdateDate"
        tools:text="San Fransisco" />

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        tools:text="Sunny" />

    <TextView
        android:id="@+id/signPlus"
        android:text="@string/signPlus"
        android:visibility="gone"
        tools:visibility="visible"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/currentTemperature"
        app:layout_constraintTop_toBottomOf="@+id/condition"
        app:layout_constraintBottom_toTopOf="@+id/windLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/signMinus"
        android:text="@string/signMinus"
        android:visibility="gone"
        tools:visibility="visible"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/currentTemperature"
        app:layout_constraintTop_toBottomOf="@+id/condition"
        app:layout_constraintBottom_toTopOf="@+id/windLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/currentTemperature"
        android:textSize="54sp"
        android:textColor="@color/white"
        android:text="@string/currentTemperature"
        tools:text = "32°"
        app:layout_constraintEnd_toStartOf="@+id/iconWeather"
        app:layout_constraintTop_toBottomOf="@+id/condition"
        app:layout_constraintBottom_toTopOf="@+id/windLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iconWeather"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/iconweather"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/condition"
        tools:src="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/syncButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:contentDescription="@string/syncbutton"
        android:src="@android:drawable/ic_popup_sync"
        app:layout_constraintStart_toEndOf="@+id/lastUpdateDate"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/darker_gray" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="22dp"
        android:background="@null"
        android:contentDescription="@string/searchbutton"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Temperature-->
    <TextView
        android:id="@+id/tempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/temp"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconWeather" />

    <TextView
        android:id="@+id/maxMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/maxMin"
        app:layout_constraintEnd_toEndOf="@+id/tempLabel"
        app:layout_constraintStart_toStartOf="@+id/tempLabel"
        app:layout_constraintTop_toBottomOf="@+id/tempLabel"
        tools:text="+32°/+12°" />

    <!--    Wind-->
    <TextView
        android:id="@+id/windLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/wind"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/humidityLabel"
        app:layout_constraintStart_toEndOf="@+id/tempLabel"
        app:layout_constraintTop_toBottomOf="@id/iconWeather" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/windKm"
        app:layout_constraintEnd_toEndOf="@+id/windLabel"
        app:layout_constraintStart_toStartOf="@+id/windLabel"
        app:layout_constraintTop_toBottomOf="@+id/windLabel"
        tools:text="10km/h" />

    <!--    Humidity-->
    <TextView
        android:id="@+id/humidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/humidity"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconWeather" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/humidityPercent"
        app:layout_constraintEnd_toEndOf="@+id/humidityLabel"
        app:layout_constraintStart_toStartOf="@+id/humidityLabel"
        app:layout_constraintTop_toBottomOf="@+id/humidityLabel"
        tools:text="75%" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tabLayout"
        app:layout_constraintStart_toStartOf="@+id/tabLayout"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>